增加httpPost(URL，msg) API